// Copyright Â© 2020-2022 The Trustix Authors
//
// SPDX-License-Identifier: MIT

syntax = "proto2";

option go_package = "github.com/nix-community/trustix/packages/trustix-proto/schema";

message LogHead {
  // Log

  required bytes LogRoot = 1;
  required uint64 TreeSize = 2;

  // Map

  required bytes MapRoot = 3;

  // Map head fields

  required bytes MHRoot = 4;
  required uint64 MHTreeSize = 5;

  // Aggregate signature
  required bytes Signature = 6;
}
